# qcs_uae_simple_ot

./: README.md  pyproject.toml
qcs_uae_simple_ot/: hooks.py  modules.txt
qcs_uae_simple_ot/controller/: quotation.py
qcs_uae_simple_ot/fixtures/: custom_field.json
qcs_uae_simple_ot/qcs_uae_simple_ot/custom/: additional_salary.json  additional_salary.json.bak
qcs_uae_simple_ot/qcs_uae_simple_ot/doctype/employee_child_tab/: employee_child_tab.json  employee_child_tab.py
qcs_uae_simple_ot/qcs_uae_simple_ot/doctype/job_revisions_form/: job_revisions_form.js  job_revisions_form.json  job_revisions_form.py  test_job_revisions_form.py
qcs_uae_simple_ot/qcs_uae_simple_ot/doctype/qcs_exclude_territory/: qcs_exclude_territory.json  qcs_exclude_territory.py
qcs_uae_simple_ot/qcs_uae_simple_ot/doctype/qcs_uae_simple_ot/: qcs_uae_simple_ot.js  qcs_uae_simple_ot.json  qcs_uae_simple_ot.py  test_qcs_uae_simple_ot.py
qcs_uae_simple_ot/qcs_uae_simple_ot/doctype/qcs_uae_simple_ot_entries/: qcs_uae_simple_ot_entries.json  qcs_uae_simple_ot_entries.py
qcs_uae_simple_ot/qcs_uae_simple_ot/doctype/qcs_uae_simple_ot_setup/: qcs_uae_simple_ot_setup.js  qcs_uae_simple_ot_setup.json  qcs_uae_simple_ot_setup.py  test_qcs_uae_simple_ot_setup.py
qcs_uae_simple_ot/qcs_uae_simple_ot/doctype/qcs_uae_simple_ot_timeslots/: qcs_uae_simple_ot_timeslots.js  qcs_uae_simple_ot_timeslots.json  qcs_uae_simple_ot_timeslots.py  test_qcs_uae_simple_ot_timeslots.py
qcs_uae_simple_ot/qcs_uae_simple_ot/doctype/tsc__awning_pricing/: tsc__awning_pricing.js  tsc__awning_pricing.json  (+1 more)
(+10 files in other folders)
